--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Welcome to The Spaghetti Hog</title>
-    <link href="css.styles.css" rel="stylesheet" type="text/css">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <h1>Welcome to the Spaghetti Hog!</h1>
@@ -14,6 +14,6 @@
     <ul>
       <li><a href="menu.html">Menu</a></li>
       <li><a href="contact-info.html">Contact Us</a></li>
-    </ul>  
+    </ul>
   </body>
 </html>
