add return links to secondary pages

--- a/menu.html
+++ b/menu.html
@@ -22,5 +22,6 @@
     <p>Soda $1.00</p>
     <p>Orange Juice $1.50</p>
     <p>Lemonade $1.25</p>
+    <p><a href="index.html">Return to main page</a></p>
   </body>
 </html>
