--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Welcome to The Spaghetti Hog</title>
+    <title >Welcome to The Spaghetti Hog</title>
     <link href="css/styles.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <h1>Welcome to the Spaghetti Hog!</h1>
+    <h1 class="title">Welcome to the Spaghetti Hog!</h1>
     <img src="img/spaghetti.jpg" alt="picture of our delicious spaghetti" width="400">
     <h2>Our Food</h2>
     <p>
       Spaghetti Hog cuisine is the finest in comfort food. Our spaghetti is so good. It's amazing. Really.
     </p>
+    <p class="about">
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     <ul>
       <li><a href="menu.html">Menu</a></li>
       <li><a href="contact-info.html">Contact Us</a></li>
