--- a/menu.html
+++ b/menu.html
@@ -8,7 +8,7 @@
     <h1>Menu</h1>
     <h2>Appetizers</h2>
     <p>Homemade Garlic Bread $2.00</p>
-    <p>Caesar Salad $3.00</p>
+    <p class="important">Caesar Salad $3.00</p>
     <p>Crispy Breadsticks $1.50</p>
     <h2>Spaghetti</h2>
     <p>Classic Spaghetti $8.00</p>
@@ -18,10 +18,10 @@
     <p>The Big Salad $10.00</p>
     <p>House Salad $11.00</p>
     <p>Cole Slaw $9.00</p>
-    <h2>Drinks</h2>
-    <p>Soda $1.00</p>
-    <p>Orange Juice $1.50</p>
-    <p>Lemonade $1.25</p>
+    <h2 class="important">Drinks</h2>
+    <p class="important">Soda $1.00</p>
+    <p class="important">Orange Juice $1.50</p>
+    <p class="important">Lemonade $1.25</p>
     <p><a href="index.html">Return to main page</a></p>
   </body>
 </html>
