--- a/index.html
+++ b/index.html
@@ -17,5 +17,7 @@
       <li><a href="menu.html">Menu</a></li>
       <li><a href="contact-info.html">Contact Us</a></li>
     </ul>
+    <p>Contact e-mail:
+    <a href="mailto:restaurant.website@someplace.com">restaurant.website@someplace.com</a> </p>
   </body>
 </html>
